--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <ul class="nav__links" id="nav-links">
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="#">Concursos</a></li>
+        <li><a href="contest.html">Concursos</a></li>
         <li><a href="https://tc.gpc-upc.com">Camp</a></li>
         <li><a href="https://tpp.gpc-upc.com">TPP</a></li>
         <li><a href="https://resultados.gpc-upc.com">Admisión</a></li>
