--- a/contest.html
+++ b/contest.html
@@ -37,7 +37,7 @@
             <span class="h1__span-1">International Collegiate Programming Contest (ICPC)</span>
             <p>
                 Es la más grande, antigua y prestigiosa competencia mundial de programación. Se participa en 
-                equipos de 3 estudiantes de la misma universidad y consta de varias fases de clasificación hasta llegar al mundial.
+                equipos de 3 estudiantes de la misma universidad y consta de varias fases de clasificación hasta llegar a la final mundial.
             </p>
             <img src="images/icpc.png" alt="icpc" />
 
@@ -48,9 +48,16 @@
             </p>
             <img src="images/ieeextreme.png" alt="ieeextreme" />
 
+            <span class="h1__span-1">TCS Codevita</span>
+            <p>
+              Concurso mundial de programación dirigido a estudiantes universitarios, organizado por Tata Consultancy Services (TCS). Consta
+              de 2 fases virtuales de clasificación para llegar a la final que se realiza en la India.
+            </p>
+            <img src="images/codevita.png" alt="codevita" />
+
             <span class="h1__span-1">Maratón Femenina de Programación (MFP)</span>
             <p>
-              Concurso Femenino de Programación dirgido a estudiantes universitarias de latinoamérica, organizado por la Sociedad Brasileña de Computación (SBC). Consta
+              Concurso femenino de programación dirigido a estudiantes universitarias de latinoamérica, organizado por la Sociedad Brasileña de Computación (SBC). Consta
               de una fase virtual de clasificación para llegar a la final que se realiza en Brasil.
             </p>
             <img src="images/mfp.png" alt="mfp" />
