--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
       <ul class="nav__links" id="nav-links">
         <li><a href="index.html">Inicio</a></li>
         <li><a href="contest.html">Concursos</a></li>
-        <li><a href="https://tc.gpc-upc.com">Camp</a></li>
-        <li><a href="https://resultados.gpc-upc.com">Admisión</a></li>
+        <li><a href="admision.html">Admisión</a></li>
       </ul>
     </nav>
     <header class="header__container">
