--- a/admision.html
+++ b/admision.html
@@ -38,26 +38,24 @@
           <th> Sede </th>
           <th> Carrera</th>
         </tr>
-        <tr><td>Artica Castañeda Juan</td><td>Monterrico</td><td>C. de la Computación</td></tr>
-        <tr><td>Astocondor Bazan Alejandra</td><td>San Miguel</td><td>Ingeniería de Software</td></tr>        
-        <tr><td>Ayasta Martel Zayd</td><td>San Miguel</td><td>Ingeniería de Software</td></tr>
-        <tr><td>Baldeon Vivar Santiago</td><td>Monterrico</td><td>Ingeniería de Software</td></tr>
-        <tr><td>Barrientos Villalta Aaron</td><td>Monterrico</td><td>C. de la Computación</td></tr>
-        <tr><td>Calampa Bardales Jhoyner</td><td>San Miguel</td><td>Ingeniería de Software</td></tr>
-        <tr><td>Cuba Pareja Joaquín</td><td>San Isidro</td><td>Ingeniería de Software</td></tr>
-        <tr><td>Del Aguila Ayala Ricardo</td><td>San Miguel</td><td>Ingeniería de Software</td></tr>
-        <tr><td>Esquivel Cabrera Mark</td><td>Monterrico</td><td>C. de la Computación</td></tr>
-        <tr><td>Gallegos Huillca Henry</td><td>Monterrico</td><td>Ing. de Sistemas de Inf.</td></tr>
-        <tr><td>Gonzales Aguirre Fabio</td><td>Monterrico</td><td>C. de la Computación</td></tr>
-        <tr><td>Lino Quispe Leonardo</td><td>San Miguel</td><td>Ingeniería de Software</td></tr>
-        <tr><td>Luna Campos Joaquin </td><td>San Isidro</td><td>Ingeniería de Software</td></tr>
-        <tr><td>Martinez Medina Rai </td><td>San Miguel</td><td>Ingeniería de Software</td></tr>
-        <tr><td>Montoya Nina Paula</td><td>Monterrico</td><td>Ingeniería de Software</td></tr>
-        <tr><td>Ospinal López Meyshel</td><td>San Miguel</td><td>Ing. de Ciberseguridad</td></tr>
-        <tr><td>Sanchez Martinez Nicole</td><td>Monterrico</td><td>C. de la Computación</td></tr>
-        <tr><td>Sejuro Medina Mario</td><td>Monterrico</td><td>Ingeniería de Software</td></tr>
-        <tr><td>Sulca Sanchez Piero</td><td>San Miguel</td><td>Ingeniería de Software</td></tr>
-        <tr><td>Villarreal Bazan Angel</td><td>Monterrico</td><td>Ingeniería de Software</td></tr>
+        <tr><td>Carrillo Acho Matias</td><td>San Miguel</td><td>Ingeniería de Software</td></tr>
+        <tr><td>Coello Diestra Fatima</td><td>San Isidro</td><td>Ingeniería de Software</td></tr>        
+        <tr><td>Concha Urquiza Lisander</td><td>San Isidro</td><td>Ingeniería de Software</td></tr>
+        <tr><td>Condori Apaza Cristian</td><td>Monterrico</td><td>C. de la Computación</td></tr>
+        <tr><td>Diaz Urday Diego</td><td>San Isidro</td><td>Ing. de Sistemas de Inf.</td></tr>
+        <tr><td>Dulanto Espino Leo</td><td>San Miguel</td><td>Ingeniería de Software</td></tr>
+        <tr><td>Huayta Córdova Diego</td><td>San Isidro</td><td>Ingeniería de Software</td></tr>
+        <tr><td>Liñan Lezama Alexander</td><td>Monterrico</td><td>Ingeniería de Software</td></tr>
+        <tr><td>Lozano Moya Liria</td><td>San Isidro</td><td>Ingeniería de Software</td></tr>
+        <tr><td>Mamani Ponaylos Saul</td><td>Villa</td><td>Ingeniería de Software</td></tr>
+        <tr><td>Medina Vilca Cristian</td><td>San Isidro</td><td>Ingeniería de Software</td></tr>
+        <tr><td>Montes Chang Piero</td><td>Monterrico</td><td>Ingeniería de Software</td></tr>
+        <tr><td>Pacifico Vega Jose</td><td>San Isidro</td><td>Ingeniería de Software</td></tr>
+        <tr><td>Ramos Poma Robert</td><td>San Isidro</td><td>Ingeniería de Software</td></tr>
+        <tr><td>Rivera Chavez Salvador</td><td>Monterrico</td><td>Ingeniería de Software</td></tr>
+        <tr><td>Rojas Valero Johan</td><td>Monterrico</td><td>Ingeniería de Software</td></tr>
+        <tr><td>Tila Jimenez Marcos</td><td>San Isidro</td><td>Ingeniería de Software</td></tr>
+        <tr><td>Vilcamiza Espinoza Gabriel</td><td>Monterrico</td><td>C. de la Computación</td></tr>
         </tr>
       </table>
 
