--- a/contest.html
+++ b/contest.html
@@ -39,13 +39,6 @@
             </p>
             <img src="images/icpc.png" alt="icpc" />
 
-            <span class="h1__span-1">IEEEXtreme</span>
-            <p>
-              Concurso mundial de programación en equipos de 3 estudiantes de la misma universidad. Es organizado
-              por el IEEE y consta de una sola fase que dura 24 horas.
-            </p>
-            <img src="images/ieeextreme.png" alt="ieeextreme" />
-
             <span class="h1__span-1">TCS Codevita</span>
             <p>
               Concurso mundial de programación dirigido a estudiantes universitarios, organizado por Tata Consultancy Services (TCS). Consta
@@ -55,16 +48,24 @@
 
             <span class="h1__span-1">Maratón Femenina de Programación (MFP)</span>
             <p>
-              Concurso femenino de programación dirigido a estudiantes universitarias de latinoamérica, organizado por la Sociedad Brasileña de Computación (SBC). Consta
+              Concurso femenino de programación dirigido a estudiantes universitarias de Latinoamérica, organizado por la Sociedad Brasileña de Computación (SBC). Consta
               de una fase virtual de clasificación para llegar a la final que se realiza en Brasil.
             </p>
             <img src="images/mfp.png" alt="mfp" />
 
-            <span class="h1__span-1">Coder Bloom</span>
+            <span class="h1__span-1">Codificadas</span>
             <p>
-              Concurso Femenino de programación con ediciones mensuales, dirigido a todas las mujeres de latinoamérica.
+              Concurso femenino de programación a nivel latinoamericano, organizado por Tata Consultancy Services (TCS). Consta
+              de una fase virtual de clasificación para llegar a la final que se realiza en uno de los países latinos en donde TCS tiene presencia.
             </p>
             <img src="images/coderbloom.png" alt="coderbloom" />
+
+            <span class="h1__span-1">IEEEXtreme</span>
+            <p>
+              Concurso mundial de programación en equipos de 3 estudiantes de la misma universidad. Es organizado
+              por el IEEE y consta de una sola fase que dura 24 horas.
+            </p>
+            <img src="images/ieeextreme.png" alt="ieeextreme" />
 
             <ul class="socials">
                 <li>
