--- a/contest.html
+++ b/contest.html
@@ -58,7 +58,7 @@
               Concurso femenino de programación a nivel latinoamericano, organizado por Tata Consultancy Services (TCS). Consta
               de una fase virtual de clasificación para llegar a la final que se realiza en uno de los países latinos en donde TCS tiene presencia.
             </p>
-            <img src="images/coderbloom.png" alt="coderbloom" />
+            <img src="images/codificadas.png" alt="codificadas" />
 
             <span class="h1__span-1">IEEEXtreme</span>
             <p>
